atualizando para java 11 e log4j 2.17.2